[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "spatial_image"
author = "Matt McCormick"
author-email = "matt.mccormick@kitware.com"
home-page = "https://github.com/spatial-image/spatial-image"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"

requires = [
    "numpy",
    "xarray",
    "xarray-dataclasses",
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-mypy",
]
