[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "spatial_image"
author = "Matt McCormick"
author-email = "matt.mccormick@kitware.com"
home-page = "https://github.com/spatial-image/spatial-image"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.8" 
description-file = "README.md"

requires = [
    "numpy",
    "xarray",
    "xarray-dataclasses>=1.1.0",
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-mypy",
]

[tool.black]
line-length = 88
