[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spatial_image"
authors = [{name = "Matt McCormick", email = "matt@mmmccormick.com"}]
license.file = "LICENSE.txt"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    ]
requires-python = ">=3.10"
description = "A multi-dimensional spatial image data structure for scientific Python."
dynamic = ["version"]

dependencies = [
    "numpy",
    "xarray >=2024.10.0",
    "xarray-dataclasses",
]

[tool.black]
line-length = 88

[tool.hatch.version]
path = "spatial_image/__init__.py"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
spatial_image = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
package = { features = ["package"], solve-group = "default" }

[tool.pixi.feature.test.tasks]
test = { cmd = "pytest", description = "Run the test suite" }

[tool.pixi.feature.test.dependencies]
python = "3.10.*"
pytest = ">=8.3.4,<9"
pytz = ">=2025.1,<2026"

[tool.pixi.feature.package.tasks]
package = { cmd = "hatch build", description = "Build the package." }

[tool.pixi.feature.package.dependencies]
python = "3.10.*"
hatch = ">=1.14.0,<2"
